@@ -1,5 +1,6 @@
 package com.mycarlong.service;
 
+import com.mycarlong.controller.BoardController;
 import com.mycarlong.dto.ArticleImageDto;
 import com.mycarlong.exception.*;
 import com.mycarlong.dto.ArticleDto;
@@ -23,6 +24,8 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -37,42 +40,33 @@ public class ArticleServiceImpl implements ArticleService {
 	private final ArticleImageRepository articleImageRepository;
 	private final ReplyRepository replyRepository;
 
-	private Logger logger = LoggerFactory.getLogger(ArticleServiceImpl.class);
+	private final Logger logger = LoggerFactory.getLogger(ArticleServiceImpl.class);
+
 	@Override
 	public List<ArticleDto> findAllArticle() {
 		try {
-			//article 리스트를 불러온다
 			List<Article> articleList = articleRepository.findAll();
-
-			//article 리스트를 article DTO로 변환한다.
-			List<ArticleDto> articleDtoList = articleList.stream().map(ArticleDto::of).toList();
-
-			//img List 를 불러온다
-			for (ArticleDto articleDto : articleDtoList) {
-				for (Article article : articleList) {
-					List<ArticleImage> articleImages = article.getArticleImageList();
-					articleDto.setArticleImageList(articleImages.stream().map(ArticleImageDto::of).toList());
-				}
+			List<ArticleDto> articleDtoList = new ArrayList<>();
+			for (Article article : articleList) {
+				List<ArticleImageDto> imageDtoList = article.getArticleImageList().stream()
+						.map(ArticleImageDto::of)
+						.collect(Collectors.toList());
+				ArticleDto articleDto = ArticleDto.of(article);
+				articleDto.setArticleImageList(imageDtoList);
+				articleDtoList.add(articleDto);
 			}
-			//변환한 articld DTO list 의 각각 dto에 이미지 DTO 리스트를 set 한다
-
-
 			return articleDtoList;
-
-//
-//			//			return articleList.stream().map(ArticleDto::of).collect(Collectors.toList());
-//			//TODO : article DTO에 이미지DTO 추가해서 반환하기 작업 끝 24-05-13 13:10 여기 다음부터 작업할것.
-//			return imageDtoInjection(articleList, articleDtoList);
 		} catch (Exception e) {
 			throw new DatabaseAccessException("데이터베이스 접근 에러발생", e);
 		}
 	}
 
 
-	@Override
-	public List<ArticleDto> findFiftyArticldOrderByDesc() {
-		return pagingArticle(20,"null");  //내부에서 이미 예외처리 하므로 별도 예외처리 X
-	}
+
+	//	@Override
+//	public List<ArticleDto> findFiftyArticldOrderByDesc() {
+//		return pagingArticle(20, "null");  //내부에서 이미 예외처리 하므로 별도 예외처리 X
+//	}
 
 	@Override
 	@Transactional
@@ -80,35 +74,23 @@ public class ArticleServiceImpl implements ArticleService {
 		try {
 			Article article = articleDto.createArticle();
 
-			for(int i=0;i<imgFileList.size();i++){
+			for (int i = 0; i < imgFileList.size(); i++) {
 				ArticleImage articleImage = new ArticleImage();
 				articleImage.setArticle(article);
 				articleImage.setImageSetNum(i);
-				logger.info(" Article Image = {}",articleImage);
+				logger.info(" Article Image = {}", articleImage);
 
 
-				articleImageService.saveArticleImg(article, String.valueOf(i) , imgFileList.get(i));
-//				article.getThisImgList().add(articleImage);
+				articleImageService.saveArticleImg(article, String.valueOf(i), imgFileList.get(i));
+				//				article.getThisImgList().add(articleImage);
 			}
-//			article.setThisImgList(articleImageList);
+			//			article.setThisImgList(articleImageList);
 			articleRepository.save(article);
 		} catch (Exception e) {
 			throw new FileUploadException("File Upload 혹은 이미지 등록 중 에러발생", e);
 		}
 
 	}
-
-	@Override
-	public ArticleDto viewArticleDetail(Long articleId) {
-		Article article = articleRepository.findById(articleId).orElse(null); //Optional 객체로 반환하기 때문에 orElse 추가
-		if (article == null) {
-			throw new DataMismatchException("제공된 Article ID에 해당하는 게시글을 찾을 수 없습니다.", null);
-		}
-		ArticleDto articleDto = ArticleDto.of(article);  //dto 생성
-		articleDto.setArticleImageList(article.getArticleImageList().stream().map(ArticleImageDto::of).toList()); // dto 에 이미지리스트 삽입
-		return articleDto;
-	}
-
 
 
 	@Override
@@ -133,10 +115,10 @@ public class ArticleServiceImpl implements ArticleService {
 	}
 
 	/*
-	* 요청자가 author인 경우에만 게시글의 modify , delete를 가능케 한다. <br>
-	*
-	* 요청자를 확인하는 함수 verifyUser()
-	* */
+	 * 요청자가 author인 경우에만 게시글의 modify , delete를 가능케 한다. <br>
+	 *
+	 * 요청자를 확인하는 함수 verifyUser()
+	 * */
 	private void verifyUser(ArticleFormDto articleDto) {
 		Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
 		if (principal instanceof UserDetails) {
@@ -146,21 +128,69 @@ public class ArticleServiceImpl implements ArticleService {
 			}
 		}
 	}
+
+
+	@Override
+	public ArticleDto viewArticleDetail(Long articleId) {
+		Article article = articleRepository.findById(articleId).orElse(null); //Optional 객체로 반환하기 때문에 orElse 추가
+		if (article == null) {
+			throw new DataMismatchException("제공된 Article ID에 해당하는 게시글을 찾을 수 없습니다.", null);
+		}
+		ArticleDto articleDto = ArticleDto.of(article);  //dto 생성
+		articleDto.setArticleImageList(article.getArticleImageList().stream().map(ArticleImageDto::of).toList()); // dto 에 이미지리스트 삽입
+		return articleDto;
+	}
+
+
+//	@Override
+//	public List<ArticleDto> findByCategory(String category) {
+//
+//		List<Article> articleList = articleRepository.findByCategory(category);
+////		articleList.sort(Comparator.comparing(Article::getRegTime));
+//
+//		List<ArticleDto> articleDtoList = new ArrayList<>();
+//		for (Article article : articleList) {
+//			List<ArticleImage> foundArticleImages = article.getArticleImageList();//articleImageRepository.findByArticleId(article.getId());
+//			logger.info("foundArticleImages 확인하기:{}", article.getArticleImageList());
+//			List<ArticleImageDto> foundArticleImagesDto = new ArrayList<>();
+//			for (ArticleImage articleImage: foundArticleImages) {
+//				//logger.info("articleImage 이름 , 연관 아티클아이디 확인하기:{}", articleImage.getImageSavedName(), articleImage.getArticle().getId());
+//				ArticleImageDto articleImageDto = ArticleImageDto.builder()
+//						.imageId(articleImage.getId())
+//						.imageOriginName(articleImage.getImageOriginName())
+//						.imageSavedName(articleImage.getImageSavedName())
+//						.imageSavedPath(articleImage.getImageSavedPath())
+//						.articleId(articleImage.getArticle().getId())
+//						.build();
+//				foundArticleImagesDto.add(articleImageDto);
+//			}
+//
+//			ArticleDto newArticleDto = ArticleDto.of(article);
+//			newArticleDto.setArticleImageList(foundArticleImagesDto);
+//			articleDtoList.add(newArticleDto);
+//		}
+//		return articleDtoList;
+//	}
+
 	@Override
 	public List<ArticleDto> findByCategory(String category) {
-		List<Article> articleList = articleRepository.findByCategoryOrderByRegTimeDesc(category);
-		List<ArticleDto> articleDtoList = new ArrayList<>();
-		if (articleList == null) {
-			throw new DataMismatchException("제공된 category 에 해당하는 데이터를 찾을 수 없습니다. 파라미터 형식 'model-year'", null);
-		}
-
-		return pagingArticleByCategory(20,category , articleList, articleDtoList);
-		//return articleList.stream().map(ArticleDto::of).collect(Collectors.toList());
+		List<Article> articleList = articleRepository.findByCategory(category);
+		return articleList.stream().map(article -> {
+			List<ArticleImageDto> foundArticleImagesDto = article.getArticleImageList().stream()
+					.map(ArticleImageDto::of)
+					.collect(Collectors.toList());
+			ArticleDto newArticleDto = ArticleDto.of(article);
+			newArticleDto.setArticleImageList(foundArticleImagesDto);
+			return newArticleDto;
+		}).collect(Collectors.toList());
 	}
+
+
 
 	private List<ArticleDto> imageDtoInjection(List<Article> articleList, List<ArticleDto> articleDtoList) {
 		for (Article article : articleList) {
-			List<ArticleImage> articleImages = articleImageRepository.findByArticleIdOrderByImageSetNum(article.getId());
+			List<ArticleImage> articleImages = articleImageRepository.findByArticleId(article.getId());
+			logger.info("articleImages 불러온 결과 ! : {}", articleImages);
 			List<ArticleImageDto> imageDtos = articleImages.stream().map(ArticleImageDto::of).toList();
 
 			ArticleDto articleDto = ArticleDto.of(article);    // convert
@@ -172,23 +202,23 @@ public class ArticleServiceImpl implements ArticleService {
 		return articleDtoList;
 	}
 
-
-	private List<ArticleDto> pagingArticle(int size , String attribute ) {
+	public List<ArticleDto> pagingArticle(int size, String attribute) {
 		PageRequest pageRequest = PageRequest.of(0, size, Sort.by("id").descending());
 		Page<Article> page = articleRepository.findAll(pageRequest);
 		List<Article> articles = page.getContent();
-		return  articles.stream().map(ArticleDto::of).collect(Collectors.toList());
-		}
-
-
-	private  List<ArticleDto> pagingArticleByCategory(int size, String category ,
-	                                                  List<Article>  articleList,  List<ArticleDto> articleDtoList) {
-			PageRequest pageRequests = PageRequest.of(0, size, Sort.by("regTime").descending());
-			Page<Article> pages = articleRepository.findByCategoryOrderByRegTimeDesc(pageRequests , category);
-
-			List<Article> articles = pages.getContent();
-			return  imageDtoInjection(articles,articleDtoList); // articles.stream().map(ArticleDto::of).collect(Collectors.toList());
-		}
+		return articles.stream().map(ArticleDto::of).collect(Collectors.toList());
 	}
+}
+
+//
+//	private  List<ArticleDto> pagingArticleByCategory(int size, String category ,
+//	                                                  List<Article>  articleList,  List<ArticleDto> articleDtoList) {
+//			PageRequest pageRequests = PageRequest.of(0, size, Sort.by("regTime").descending());
+//			Page<Article> pages = articleRepository.findByCategoryOrderByRegTimeDesc(pageRequests , category);
+//
+//			List<Article> articles = pages.getContent();
+//			return  imageDtoInjection(articles,articleDtoList); // articles.stream().map(ArticleDto::of).collect(Collectors.toList());
+//		}
+//	}
 
 
